src/test/resources/crux/stages/type-check/test02.out
Crux Program has no type errors.
ast.DeclarationList(3)
  ast.FunctionDefinition(3)[Symbol(main:func(TypeList()):void), []]
    ast.StatementList(4)
      void: ast.Call(4)[Symbol(printInt)]
        int: ast.LiteralInt(4)[42]
