src/test/resources/crux/stages/type-check/test02.crx
// test built in

void main() {
  printInt(42);
}
